# lab7

./: .gitignore  .gitmodules  README.md
exceptions/: exceptions.hpp
generator/: CMakeLists.txt  generator.hpp  ordinal_generator.hpp
lazy_sequence/: CMakeLists.txt  lazy_sequence.hpp
optional/: CMakeLists.txt  optional.hpp
statistics/: CMakeLists.txt  statistics.hpp
streams/: CMakeLists.txt  read_only_stream.hpp
tests/: CMakeLists.txt  tests_lazy_sequence.cpp
transfinite_numbers/: CMakeLists.txt  cardinals.hpp  ordinals.hpp
